--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,21 @@
 <head>
   <meta charset="utf-8">
   <title>What the Weather!</title>
+  <link rel="stylesheet" href="../app/bootstrap.min.css">
+  <style>
+    html,
+    body,
+    .app {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 
 <body>
-  <div id="app">
-  </div>
+  <div id="app" class="app"></div>
 </body>
 
 </html>
