--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>What the Weather!</title>
   <link rel="stylesheet" href="../app/bootstrap.min.css">
+  <link rel="stylesheet" href="../app/style.css">
   <style>
     html,
     body,
